[gd_scene load_steps=13 format=2]

[ext_resource path="res://GUI/start_Gui.gd" type="Script" id=1]
[ext_resource path="res://art/startbutton.jpeg" type="Texture" id=2]
[ext_resource path="res://Sounds/Background Music/menu_music.ogg" type="AudioStream" id=3]
[ext_resource path="res://art/print screen 4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Jump0-sheet.png" type="Texture" id=5]
[ext_resource path="res://art/exitbutton.jpeg" type="Texture" id=32]
[ext_resource path="res://art/optionsbutton.jpeg" type="Texture" id=33]
[ext_resource path="res://GUI/menu_music.tscn" type="PackedScene" id=34]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 252, 288 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 864, 252, 288 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 252, 864, 252, 288 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[node name="Gui" type="Node"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 0, -3.1748 )
scale = Vector2( 1.67525, 1.6245 )
texture = ExtResource( 4 )
centered = false
region_rect = Rect2( 0, 0, 1920, 1088 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="background"]
position = Vector2( 558.913, 354.462 )
frames = SubResource( 4 )
animation = "idle"
frame = 1
speed_scale = 2.0
playing = true

[node name="bg_music1" parent="background" instance=ExtResource( 34 )]
stream = ExtResource( 3 )

[node name="Start" type="TextureButton" parent="."]
margin_left = 1303.37
margin_top = 193.342
margin_right = 1771.37
margin_bottom = 337.342
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="."]
margin_left = 1308.2
margin_top = 410.183
margin_right = 1776.2
margin_bottom = 554.182
texture_normal = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 1309.28
margin_top = 625.322
margin_right = 1777.28
margin_bottom = 769.322
texture_normal = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
